test/error/CMakeFiles/error_bad_extern_split.dir/depend.make
# Empty dependencies file for error_bad_extern_split.
# This may be replaced when dependencies are built.
